--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -96,7 +96,7 @@
 
 textarea {
     width: 300px;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .modal-info.baker-info {
